--- a/css/style.css
+++ b/css/style.css
@@ -396,3 +396,48 @@ header {
 /* course content end */
 
 
+
+/* start menu-wrap for tab,mobile & etc */
+
+.menu-wrap{
+    display: none;
+}
+ .menu-content-wrapper {
+    display: none;
+    background-color: #e7e9eb;
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    
+ }
+ 
+ .menu-content-wrapper ul{
+    padding: 4rem 0 0 0;
+ }
+ .menu-content-wrapper ul li {
+    list-style-type: none;
+    padding: 1rem;
+
+ }
+ .menu-content-wrapper ul li a{
+    text-decoration: none;
+    color: #050966;
+    font-size: 1.4em;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 700;
+    padding: 1rem;
+ }
+
+ .menu-content-wrapper .tuto-btn a{
+        position: absolute;
+        top: 0rem;
+        right: 1rem;
+        text-decoration: none;
+        cursor: pointer;
+        font-size: 2.4em;
+        font-weight: 700;
+        color: #000;
+    
+ }
+ /* end menu-wrap for tab,mobile & etc */
